--- a/new-design/styles/layout-small.css
+++ b/new-design/styles/layout-small.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     padding: 0 10px;
-    overflow: hidden;
 }
 #post-header {
     display: none;
